Fix missing white space around button text

--- a/packages/customer-effort-score/src/style.scss
+++ b/packages/customer-effort-score/src/style.scss
@@ -44,7 +44,7 @@
 			box-sizing: border-box;
 			width: 9em;
 			height: 100%;
-			padding: 1em 0;
+			padding: 1em 0.5em;
 			font-size: 0.9em;
 
 			&:hover {
